static/css/style.css
@font-face{
    /* font on https://fontlibrary.org/en/font/intuitive */ 
    /* copywrites: Bruno de Souza Leão 2011 */ 
    font-family: IntuitiveRegular;
    src: url('/static/fonts/intuitive.ttf');
	font-weight: normal; 
	font-style: normal;
}

html{
    height: 100%;
    width: 100%;
}

body{
    height: 100%;
    background-image: url("/static/images/checker.png");
    background-repeat:repeat;
    background-attachment: fixed;
    color: #d9cfc9;
    font-family: 'IntuitiveRegular';
    font-weight: normal;
    font-style: normal;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'IntuitiveRegular';
    font-weight: normal;
    font-style: normal;
}

div pre {
    background-color: inherit;
    font-family: inherit;
}

/* my own css classes */

.container{
    min-height:100%;
    /* background: rgb(22,22,26); */
    /* background: rgba(22,22,26,0.75); */
    /* background: #16161a linear-gradient(90deg, rgba(12,12,16,0.5) 0%, rgba(25,25,28,0.7) 20%, rgba(20, 20, 24, 0.7) 50%, rgba(25,25,28,0.7) 80%, rgba(12,12,16,0.5) 100%); */
    background: #16161a linear-gradient(90deg, rgba(12,12,16,0.5) 0%, rgba(25,25,28,0.7) 20%, rgba(20, 20, 24, 0.7) 50%, rgba(25,25,28,0.7) 80%, rgba(12,12,16,0.5) 100%);
    opacity: 40%;
    padding-bottom: 100px;
}

.footer{
    margin-top: -70px;
}

.command-line {

}

.main{
    /*background-color: #040404;*/
    /* background-color: #f5f5fc; */
    /* border-radius: 10px; */
    /* padding-bottom: 40px; */
    /* padding-top: 30px; */
}

.wally {
    float: left;
    padding-right: 4%;
}

.grvtext {
    padding-top: 25px;
}

.brand-symbol {
    font-size: 120%;
    font-weight: bold;
    animation: colorchange 30s; /* animation-name followed by duration in seconds*/
    /* you could also use milliseconds (ms) or something like 2.5s */
    -webkit-animation: colorchange 30s; /* Chrome and Safari */
    -moz-animation: colorchange 30s; /* Chrome and Safari */
    -o-animation: colorchange 30s; /* Chrome and Safari */

    animation-iteration-count: infinite;
    -moz-animation-iteration-count: infinite;
    -webkit-animation-iteration-count: infinite;
    -o-animation-iteration-count: infinite;
}

@keyframes colorchange
{
    0%  {color: gold;}
    25%   {color: yellow;}
    50%  {color: orange;}
    75%   {color: yellow;}
    100%  {color: gold;}
}

@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: gold;}
    25%   {color: yellow;}
    50%  {color: orange;}
    75%   {color: yellow;}
    100%  {color: gold;}
}

@-moz-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: gold;}
    25%   {color: yellow;}
    50%  {color: orange;}
    75%   {color: yellow;}
    100%  {color: gold;}
}

@-o-keyframes colorchange /* Safari and Chrome - necessary duplicate */
{
    0%  {color: gold;}
    25%   {color: yellow;}
    50%  {color: orange;}
    75%   {color: yellow;}
    100%  {color: gold;}
}

/* overriding bootstrap and typed css classes */

a {
    -webkit-transition: color ease 1s;
    -moz-transition: color ease 1s;
    -o-transition: color ease 1s;
    transition: color ease 1s;
    color: #dbb320;
}

td a {
    text-decoration: none;
}

.nav > .inactive > a {
    transition: ease 1s;
    border-style: outset;
    border-width: 2px;
    color: #dbb320;
    background: #16161a linear-gradient(300deg, black 0%, #16161a 40%, #18181f 60%, #222229 80%, #25252f);
}

.nav > .active > a {
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -o-transition: ease 1s;
    transition: ease 1s;
    color: lightskyblue;
    background: #16161a linear-gradient(300deg, black 0%, #16161a 40%, #18181f 60%, #222229 80%, #25252f);
}

a:hover {
    color: lightskyblue;
    text-decoration: none;
}

.nav > .active > a:hover {
    color: #b9bfd9;
    border-style: inset;
    border-width: 2px;
    border-color: gold;
}

.nav > .inactive > a:hover {
    color: #b9bfd9;
    border-style: inset;
    border-width: 2px;
    border-color: gold;
}

.lead {
    font-size: 120%;
}

.nav > li > a {
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -o-transition: ease 1s;
    transition: ease 1s;
    border-style: outset;
    border-width: 2px;
    border-color: #334;
}

.nav > li > a:hover {
    background-color: inherit;
    border-style: inset;
    border-width: 2px;
    border-color: #b9bfd9;
    color: lightskyblue;
    background: #16161a linear-gradient(300deg, black 0%, #16161a 40%, #18181f 60%, #222229 80%, #25252f);
    -webkit-transition: ease 1s;
    -moz-transition: ease 1s;
    -o-transition: ease 1s;
    transition: ease 1s;
}

table a:not(.btn), .table a:not(.btn) {
    text-decoration: none;
}

.typed-box{
    height: 80px;
    text-align: center;
}

.typed{
    display: inline-block;
    text-align: left;
}

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    -o-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}

@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}

